# loadable-singletons

./: CHANGELOG.md  Main.hs  README.md  cabal.project  loadable-singletons.cabal
