cabal-version:      3.0
name:               loadable-singletons
version:            0.1.0.0

synopsis:           Types whose single value is loaded with an effect.
description:
    This is a library for handling resources.

    The idea is that for each resource file separate from Haskell code, there's
    a Haskell datatype that corresponds to it in the code itself. And those
    datatypes have a single value: the loaded and parsed resource, which is
    accessed through an effectful action.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Díaz Carrete
maintainer:         diaz_carrete@yahoo.com
category:           Data
extra-source-files: 
    CHANGELOG.md, 
    README.md,
    .gitignore
source-repository    head
    type:     git
    location: https://github.com/danidiaz/loadable-singletons.git

executable loadable-singletons
    main-is:          Main.hs
    build-depends:    base >= 4.11.0.0 && < 5,
                      direct-sqlite,
                      text,
                      bytestring,
                      directory,
                      filepath,
                      optparse-applicative
    default-language: Haskell2010

